--- a/public/index.html
+++ b/public/index.html
@@ -35,9 +35,10 @@
       <script>
         function handleCredentialResponse(response) {
             
+            const url = `${window.location.origin}/api/auth/google`;
             const body = { id_token: response.credential};
           
-           fetch('http://localhost:8080/api/auth/google',{
+           fetch(url,{
             method:'POST',
             headers: {
                 'Content-type':'application/json'
@@ -64,6 +65,7 @@
             google.accounts.id.revoke(localStorage.getItem('email'), done=> {
                 localStorage.clear();
                 location.reload();
+
             })
         }
       </script>
